<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>teleop</name>
  <version>0.0.0</version>
  <description>A teleop program similar to the base ROS2 implementation, with extra safety considerations</description>
  <maintainer email="37396126+KMcNickel@users.noreply.github.com">KMcNickel</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>Curses</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
